# Renate-sales-agent

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  docker-compose.yml
.memory/: MEMORY.md  feedback_enrichment.md  feedback_no_anthropic.md  feedback_plan_agents.md  project_status.md  session_2026_04_02_06.md  user_profile.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  logging_config.py  main.py  middleware.py
backend/app/api/: health.py  leads.py  reports.py  router.py  scrape_jobs.py
backend/app/db/: session.py
backend/app/models/: job_position.py  lead.py  proxy.py  report.py  scrape_job.py
backend/app/scheduler/: jobs.py
backend/app/schemas/: lead.py  report.py  scrape_job.py
backend/app/scraper/: base.py  browser_pool.py  captcha_solver.py  human_behavior.py  manager.py  proxy_pool.py  stealth.py
backend/app/scraper/fallback/: apify_client.py  firecrawl_client.py
backend/app/scraper/sources/: career_page.py  glassdoor.py  google_jobs.py  indeed.py  linkedin.py  naukri.py
backend/app/services/: ai_extraction.py  apollo_client.py  email_discovery.py  email_sender.py  enrichment_service.py  hunter_client.py  job_service.py  lead_service.py  report_service.py
backend/app/utils/: dedup.py  dns_discovery.py  email_patterns.py  phone_validator.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useJobs.ts  (+2 more)
playwright-browser/: Dockerfile  server.js
(+18 files in other folders)
