[project]
name = "renate-sales-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "playwright>=1.52",
    "playwright-stealth>=1.0.6",
    "anthropic>=0.52",
    "apscheduler>=3.10,<4.0",
    "thefuzz[speedup]>=0.22",
    "dnspython>=2.7",
    "aiosmtplib>=3.0",
    "aiohttp>=3.11",
    "python-multipart>=0.0.18",
    "structlog>=24.4",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
